--- a/Expedition/Storyboards/Onboarding.storyboard
+++ b/Expedition/Storyboards/Onboarding.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -23,7 +23,7 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2r-oW-2gt">
-                                <rect key="frame" x="82" y="747.66666666666663" width="250" height="109.33333333333337"/>
+                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="v2r-oW-2gt" secondAttribute="height" multiplier="137:60" id="UuT-pY-ANr"/>
                                     <constraint firstAttribute="width" constant="250" id="XGP-pf-742"/>
@@ -80,7 +80,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="customization" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VzF-3m-hxH">
-                                                    <rect key="frame" x="101.66666666666669" y="191" width="211" height="43"/>
+                                                    <rect key="frame" x="101.5" y="191" width="211" height="43"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="31"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -113,7 +113,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Igv-H1-0Rv">
-                                                    <rect key="frame" x="345" y="26.666666666666671" width="51" height="31"/>
+                                                    <rect key="frame" x="345" y="26.5" width="51" height="31"/>
                                                     <color key="onTintColor" name="Expedition Blue"/>
                                                     <color key="thumbTintColor" name="Expedition White"/>
                                                 </switch>
@@ -142,7 +142,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KeJ-H3-G27">
-                                                    <rect key="frame" x="345" y="26.666666666666671" width="51" height="31"/>
+                                                    <rect key="frame" x="345" y="26.5" width="51" height="31"/>
                                                     <color key="onTintColor" name="Expedition Blue"/>
                                                     <color key="thumbTintColor" name="Expedition White"/>
                                                 </switch>
@@ -209,7 +209,7 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-kQ-LuS">
-                                <rect key="frame" x="82" y="747.66666666666663" width="250" height="109.33333333333337"/>
+                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="f6c-kQ-LuS" secondAttribute="height" multiplier="137:60" id="Deo-dz-V6b"/>
                                     <constraint firstAttribute="width" constant="250" id="W7E-29-F5h"/>
@@ -266,7 +266,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="privacy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPJ-ad-c0A">
-                                                    <rect key="frame" x="151.66666666666666" y="191" width="110.99999999999997" height="43"/>
+                                                    <rect key="frame" x="151.5" y="191" width="111" height="43"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="31"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -299,7 +299,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XBV-fB-MdN">
-                                                    <rect key="frame" x="345" y="26.666666666666671" width="51" height="31"/>
+                                                    <rect key="frame" x="345" y="26.5" width="51" height="31"/>
                                                     <color key="onTintColor" name="Expedition Blue"/>
                                                     <color key="thumbTintColor" name="Expedition White"/>
                                                 </switch>
@@ -328,7 +328,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="luv-xO-JAp">
-                                                    <rect key="frame" x="345" y="26.666666666666671" width="51" height="31"/>
+                                                    <rect key="frame" x="345" y="26.5" width="51" height="31"/>
                                                     <color key="onTintColor" name="Expedition Blue"/>
                                                     <color key="thumbTintColor" name="Expedition White"/>
                                                 </switch>
@@ -357,7 +357,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mLC-eS-wb3">
-                                                    <rect key="frame" x="345" y="26.666666666666671" width="51" height="31"/>
+                                                    <rect key="frame" x="345" y="26.5" width="51" height="31"/>
                                                     <color key="onTintColor" name="Expedition Blue"/>
                                                     <color key="thumbTintColor" name="Expedition White"/>
                                                 </switch>
@@ -405,7 +405,7 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIc-wu-hx8">
-                                <rect key="frame" x="82" y="747.66666666666663" width="250" height="109.33333333333337"/>
+                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="2Xr-up-wEc"/>
                                     <constraint firstAttribute="width" secondItem="XIc-wu-hx8" secondAttribute="height" multiplier="137:60" id="XS9-oe-2ZB"/>
@@ -462,7 +462,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gestures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DvU-Ff-RY7">
-                                                    <rect key="frame" x="142.66666666666666" y="191" width="128.99999999999997" height="43"/>
+                                                    <rect key="frame" x="142.5" y="191" width="129" height="43"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="31"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -489,7 +489,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe down on the search bar to reload" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5e6-3n-PET">
-                                                    <rect key="frame" x="20" y="30.333333333333336" width="374" height="23.333333333333336"/>
+                                                    <rect key="frame" x="20" y="30.5" width="374" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -511,7 +511,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe right on the search bar for options" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-Xz-byb">
-                                                    <rect key="frame" x="20" y="30.333333333333336" width="374" height="23.333333333333336"/>
+                                                    <rect key="frame" x="20" y="30.5" width="374" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -533,7 +533,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe left on the search bar for history" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64Q-qF-Dq0">
-                                                    <rect key="frame" x="20" y="30.333333333333336" width="374" height="23.333333333333336"/>
+                                                    <rect key="frame" x="20" y="30.5" width="374" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -555,7 +555,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe up on the search bar for desktop website" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qkT-US-J66">
-                                                    <rect key="frame" x="20" y="30.333333333333336" width="374" height="23.333333333333336"/>
+                                                    <rect key="frame" x="20" y="30.5" width="374" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -577,7 +577,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tap with three fingers to share" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2w1-qz-FGY">
-                                                    <rect key="frame" x="20" y="30.333333333333336" width="374" height="23.333333333333336"/>
+                                                    <rect key="frame" x="20" y="30.5" width="374" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
